Updated Network Manager Bot

--- a/DBM-Network-Manager/commands/2_(discord.ggdiscordapp.cominvitediscord.me).json
+++ b/DBM-Network-Manager/commands/2_(discord.ggdiscordapp.cominvitediscord.me).json
@@ -65,6 +65,11 @@
       "name": "Check Variable"
     },
     {
+      "comment": "---",
+      "color": "#000000",
+      "name": "Comment"
+    },
+    {
       "message": "0",
       "varName": "",
       "info": "2",
