--- a/DBM-Network-Manager/events/16_OnRawDataAppDov.json
+++ b/DBM-Network-Manager/events/16_OnRawDataAppDov.json
@@ -1,8 +1,8 @@
 {
-  "name": "OnStar",
+  "name": "OnRawDataAppDov",
   "temp": "msg",
   "event-type": "28",
-  "_id": "NNWE3",
+  "_id": "cwGyo",
   "actions": [
     {
       "source": "hUbUn",
@@ -20,7 +20,7 @@
       "storage": "1",
       "varName": "reaction-name",
       "comparison": "1",
-      "value": "'100'",
+      "value": "'deny'",
       "iftrue": "0",
       "iftrueVal": "",
       "iffalse": "1",
@@ -64,84 +64,7 @@
       "storage": "1",
       "varName": "au_ch_id",
       "comparison": "1",
-      "value": "'379523292077228042'",
-      "iftrue": "3",
-      "iftrueVal": "7",
-      "iffalse": "0",
-      "iffalseVal": "",
-      "name": "Check Variable"
-    },
-    {
-      "storage": "1",
-      "varName": "au_ch_id",
-      "comparison": "1",
-      "value": "'386829188511957003'",
-      "iftrue": "3",
-      "iftrueVal": "6",
-      "iffalse": "0",
-      "iffalseVal": "",
-      "name": "Check Variable"
-    },
-    {
-      "storage": "1",
-      "varName": "au_ch_id",
-      "comparison": "1",
-      "value": "'379523071310299136'",
-      "iftrue": "3",
-      "iftrueVal": "5",
-      "iffalse": "0",
-      "iffalseVal": "",
-      "name": "Check Variable"
-    },
-    {
-      "storage": "1",
-      "varName": "au_ch_id",
-      "comparison": "1",
-      "value": "'379523089811374080'",
-      "iftrue": "3",
-      "iftrueVal": "4",
-      "iffalse": "0",
-      "iffalseVal": "",
-      "name": "Check Variable"
-    },
-    {
-      "storage": "1",
-      "varName": "au_ch_id",
-      "comparison": "1",
-      "value": "'379522798009319435'",
-      "iftrue": "3",
-      "iftrueVal": "3",
-      "iffalse": "0",
-      "iffalseVal": "",
-      "name": "Check Variable"
-    },
-    {
-      "storage": "1",
-      "varName": "au_ch_id",
-      "comparison": "1",
-      "value": "'379523133184409600'",
-      "iftrue": "3",
-      "iftrueVal": "2",
-      "iffalse": "0",
-      "iffalseVal": "",
-      "name": "Check Variable"
-    },
-    {
-      "storage": "1",
-      "varName": "au_ch_id",
-      "comparison": "1",
-      "value": "'414814123562631169'",
-      "iftrue": "3",
-      "iftrueVal": "1",
-      "iffalse": "0",
-      "iffalseVal": "",
-      "name": "Check Variable"
-    },
-    {
-      "storage": "1",
-      "varName": "au_ch_id",
-      "comparison": "1",
-      "value": "'445302973854122014'",
+      "value": "'483693395240288286'",
       "iftrue": "0",
       "iftrueVal": "",
       "iffalse": "1",
@@ -150,10 +73,60 @@
     },
     {
       "info": "0",
-      "find": "402203855208579083",
+      "find": "483693395240288286",
       "storage": "1",
       "varName": "approval-channel",
       "name": "Find Channel"
+    },
+    {
+      "comment": "Check if 5 reactions",
+      "color": "#000000",
+      "name": "Comment"
+    },
+    {
+      "storage": "1",
+      "varName": "reaction-count",
+      "changeType": "0",
+      "value": "'${tempVars(\"msg\").count}'",
+      "name": "Control Variable"
+    },
+    {
+      "storage": "1",
+      "varName": "reaction-count",
+      "comparison": "4",
+      "value": "4",
+      "iftrue": "0",
+      "iftrueVal": "",
+      "iffalse": "1",
+      "iffalseVal": "",
+      "name": "Check Variable"
+    },
+    {
+      "behavior": "1",
+      "interpretation": "0",
+      "code": "var users = tempVars(\"msg\").users.array();\n//var react = reacts.find('name', 'deny');\nthis.storeValue(users, 1, \"users-raw\", cache);\nthis.callNextAction(cache);",
+      "storage": "0",
+      "varName": "",
+      "name": "Run Script"
+    },
+    {
+      "list": "7",
+      "varName": "users-raw",
+      "start": "",
+      "middle": "",
+      "end": ", ",
+      "storage": "1",
+      "varName2": "users-ra",
+      "name": "Convert List to Text"
+    },
+    {
+      "text": "${tempVars(\"users-ra\")}",
+      "text2": ", <@422485418014015491>",
+      "text3": " ",
+      "info": "0",
+      "storage": "1",
+      "varName": "users",
+      "name": "Replace Text"
     },
     {
       "comment": "Check if the raw data is registerd",
@@ -170,7 +143,7 @@
     {
       "server": "0",
       "varName": "",
-      "dataName": "msg_${tempVars(\"message_id\")}_pub_id",
+      "dataName": "msg_${tempVars(\"message_id\")}_id",
       "comparison": "0",
       "value": "",
       "iftrue": "3",
@@ -182,13 +155,33 @@
     {
       "channel": "5",
       "varName": "approval-channel",
-      "message": ":star: **Error!** The starred message does not include raw data!",
+      "message": "⛔ Error! Please don't ping Staff - Lasse will see this!",
       "storage": "0",
       "varName2": "",
       "name": "Send Message"
     },
     {
       "name": "End Action Sequence"
+    },
+    {
+      "server": "0",
+      "varName": "",
+      "dataName": "raw_${tempVars(\"raw_id\")}_status",
+      "comparison": "1",
+      "value": "'pending'",
+      "iftrue": "0",
+      "iftrueVal": "",
+      "iffalse": "1",
+      "iffalseVal": "",
+      "name": "Check Server Data"
+    },
+    {
+      "server": "0",
+      "varName": "",
+      "dataName": "raw_${tempVars(\"raw_id\")}_status",
+      "changeType": "0",
+      "value": "'denied'",
+      "name": "Control Server Data"
     },
     {
       "comment": "Stores Raw Data Info",
@@ -198,7 +191,7 @@
     {
       "server": "0",
       "varName": "",
-      "dataName": "msg_${tempVars(\"message_id\")}_pub_id",
+      "dataName": "msg_${tempVars(\"message_id\")}_id",
       "defaultVal": "0",
       "storage": "1",
       "varName2": "raw_id",
@@ -211,15 +204,6 @@
       "defaultVal": "0",
       "storage": "1",
       "varName2": "raw_au",
-      "name": "Store Server Data"
-    },
-    {
-      "server": "0",
-      "varName": "",
-      "dataName": "raw_${tempVars(\"raw_id\")}",
-      "defaultVal": "0",
-      "storage": "1",
-      "varName2": "raw_text",
       "name": "Store Server Data"
     },
     {
@@ -243,7 +227,7 @@
     {
       "channel": "5",
       "varName": "approval-channel",
-      "message": ":star: **Error:** 🐾 The author left the server...",
+      "message": "🐾 The author left the server...",
       "storage": "0",
       "varName2": "",
       "name": "Send Message"
@@ -254,43 +238,23 @@
     {
       "channel": "5",
       "varName": "approval-channel",
-      "message": "${tempVars(\"reaction-user\")} starred **#${tempVars(\"raw_id\")}** from <@${tempVars(\"raw_au\")}>. But that is not supported yet!",
+      "message": "${tempvar(\"users\")} denied **#${tempVars(\"raw_id\")}** from <@${tempVars(\"raw_au\")}>",
       "storage": "0",
       "varName2": "",
       "name": "Send Message"
     },
     {
-      "title": " ",
-      "author": "${tempVars(\"raw_au_member\").user.username}",
-      "color": "",
-      "timestamp": "false",
-      "url": "",
-      "authorIcon": "${tempVars(\"raw_au_member\").user.avatarURL}",
-      "imageUrl": "",
-      "thumbUrl": "",
-      "storage": "1",
-      "varName": "star-embed",
-      "name": "Create Embed Message"
+      "comment": "===== Must be end =====",
+      "color": "#000000",
+      "name": "Comment"
     },
     {
-      "storage": "1",
-      "varName": "star-embed",
-      "message": "${tempVars(\"raw_text\")}",
-      "name": "Set Embed Description"
-    },
-    {
-      "storage": "1",
-      "varName": "star-embed",
-      "message": "#${tempVars(\"raw_id\")}",
-      "footerIcon": "",
-      "name": "Set Embed Footer"
-    },
-    {
-      "storage": "1",
-      "varName": "star-embed",
       "channel": "5",
-      "varName2": "star-channel",
-      "name": "Send Embed Message"
+      "varName": "raw_au_member",
+      "message": "Hey!\nI am sorry to tell you that we do not accept your raw data **${tempVars(\"raw_id\")}**!\nHave a nice day!",
+      "storage": "0",
+      "varName2": "",
+      "name": "Send Message"
     }
   ]
 }
